2000-04-08  Adam Fedor  <fedor@gnu.org>

	* Source/NSString.m: Include NSISOLatin2StringEncoding coding.
	* Source/Unicode.m (encode_chartouni): Implement latin2 encoding.
	(encode_unitochar): Likewise. (patches from  
	Stefan Urbanek <urbane@decef.elf.stuba.sk>).

2000-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m: Bugfix intialising from string.

2000-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSException.h: remove 'volatile' from function
	and method declarations - no longer supported in gcc.
	* Source/NSException.m: ditto

2000-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: init_probe() fix bug placing incorrect responder
	address in broadcast probe.

2000-04-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAttributedString.m: Infinite loop fix by Fred Kiefer to
	([replaceCharactersInRange:withAttributedString:])

2000-03-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: typo reported by karl@nfox.com fixed.

2000-03-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDictionary.m: Fix to avoid crash on being asked to init
	with contents of a nil dictionary.

2000-03-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSRunLoop.h: Added event type for exceptional
	conditions on a file descriptor and removed obsolete methods.
	* Source/NSRunLoop.m: Added support for monitoring for exceptional
	conditions on a file descriptor and removed obsolete methods for
	handling file descriptors.

2000-03-26  Richard Frith-Macdonald <rfm@gnu.org>

        * NSTimeZones/NSTimeZones.tar: Updated to latest information
        available from elsie.nci.nih.gov

2000-03-25  Jonathan Gapen  <jagapen@whitewater.chem.wisc.edu>

	* Source/NSUser.m: Added new MacOS X function,
	NSSearchPathForDirectoriesInDomains()
	* Headers/gnustep/base/NSPathUtilities.h: Added prototype and
	argument definitions for the above function.

2000-03-23  Adam Fedor  <fedor@gnu.org>
